# advent_of_code

./: .gitignore  README.md  pyproject.toml
src/aoc2025/: aoc2025.py
src/aoc2025/day1/: day1.py
src/aoc2025/day2/: day2.py
src/aoc2025/day3/: day3.py
src/utils/: set_paths.py
