[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advent_of_code"
version = "0.1.0"
description = "Solutions Advent of Code year wise"
authors = [{ name = "Darsh Ayde", email = "darshayde@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
